--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
  <head>
-  <title> nata  
-  </title>
+  <title>Mi primer commit</title>
  </head>
+ <body>
+ 	<h1 style="text-align: center;">Git tuto</h1>
+ 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio nihil dolore magnam ullam, perspiciatis a et quibusdam! Officiis fugiat, commodi odio, cum tempore porro minima numquam unde vel, ipsam hic.</p>
+ </body>
 </html>
