--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <html>
  <head>
   <title>Mi primer commit</title>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
  </head>
  <body>
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="#">Registrate</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Inicie Sesión</li>
+  </ol>
+</nav>
+
  	<h1 style="text-align: center;">Git tuto</h1>
  	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio nihil dolore magnam ullam, perspiciatis a et quibusdam! Officiis fugiat, commodi odio, cum tempore porro minima numquam unde vel, ipsam hic.</p>
+
+
  </body>
 </html>
