Login y registro pages

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
  <body>
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="#">Registrate</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Inicie Sesión</li>
+    <li class="breadcrumb-item"><a href="/registro.html">Registrate</a></li>
+    <li class="breadcrumb-item active" aria-current="page"><a href="/login.html">Inicie Sesión</a></li>
   </ol>
 </nav>
 
