--- a/registro.html
+++ b/registro.html
@@ -1,1 +1,10 @@
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="#">Registrate</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Inicie Sesión</li>
+  </ol>
+</nav>
+
 aqui va el registro
